--- a/.github/workflows/build-awg-sdk.yml
+++ b/.github/workflows/build-awg-sdk.yml
@@ -108,8 +108,8 @@ jobs:
       - name: Build host tools & toolchain
         working-directory: ${{ env.OWRT_DIR }}
         run: |
-          make tools/install -i -j $(nproc)
-          make toolchain/install -i -j $(nproc)
+          make tools/install -j $(nproc)
+          make toolchain/install -j $(nproc)
 
       - name: Compile Kernel
         working-directory: ${{ env.OWRT_DIR }}
@@ -119,9 +119,9 @@ jobs:
       - name: Build packages
         working-directory: ${{ env.OWRT_DIR }}
         run: |
-          make package/feeds/awgopenwrt/amneziawg-tools/compile -i -j$(nproc)
-          make package/feeds/awgopenwrt/kmod-amneziawg/compile -i -j$(nproc)
-          make package/feeds/awgopenwrt/luci-proto-amneziawg/compile -i -j$(nproc)
+          make package/feeds/awgopenwrt/amneziawg-tools/{clean,download,prepare,compile} -j $(nproc)
+          make package/feeds/awgopenwrt/kmod-amneziawg/{clean,download,prepare,compile} -j $(nproc)
+          make package/feeds/awgopenwrt/luci-proto-amneziawg/{clean,download,prepare,compile} -j $(nproc)
 
       - name: Prepare artifacts OpenWRT_v${{ matrix.tag }} ${{ matrix.build_env.target}}/${{ matrix.build_env.subtarget}}
         run: |
