--- a/.github/workflows/build-awg-sdk.yml
+++ b/.github/workflows/build-awg-sdk.yml
@@ -70,6 +70,22 @@ jobs:
       - name: Export OWRT_DIR
         run: echo "OWRT_DIR=$GITHUB_WORKSPACE/openwrt" >> $GITHUB_ENV
 
+      - name: Clean system space
+        run: |
+          sudo apt-get clean
+          sudo apt-get autoremove -y
+          sudo rm -rf /usr/share/dotnet
+          sudo rm -rf /usr/local/lib/android
+          sudo rm -rf /opt/ghc
+          sudo rm -rf /opt/hostedtoolcache/CodeQL
+          sudo rm -rf /opt/microsoft
+          sudo rm -rf /opt/pipx
+          sudo rm -rf /usr/share/swift
+          echo "======================="
+          echo "清理后空间使用情况："
+          echo "======================="
+          df -h
+
       - name: Add private feed to feeds.conf
         run: |
           set -eux
